<resources>
    <string name="app_name">Pizza Party</string>
    <string name="number_of_people">Number of people?</string>
    <string name="how_hungry">How hungry?</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="total_pizzas">Total pizzas: ?</string>
    <string name="total_pizzas_num">Total pizzas: %d</string>
    <string name="calculate">Calculate</string>
    <string name="must_be_a_whole_number">Must be a whole number</string>
</resources>