<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.zybooks.pizzaparty.MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/num_attend_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="@dimen/label_text_size"
        android:labelFor="@id/num_attend_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:ems="5"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/num_attend_view_text"
        app:layout_constraintBaseline_toBaselineOf="@id/num_attend_view_text" />

    <TextView
        android:id="@+id/how_hungry_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        android:labelFor="@id/hungry_radio_group"
        app:layout_constraintTop_toBottomOf="@id/num_attend_view_text"
        app:layout_constraintLeft_toLeftOf="parent" />
    
    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/how_hungry_view_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/num_pizzas_text_view" >
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/medium"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@id/light_radio_button"
            app:layout_constraintRight_toLeftOf="@id/ravenous_radio_button" />

        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/ravenous"
            app:layout_constraintRight_toRightOf="parent" />
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/total_pizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/hungry_radio_group"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick"
        app:layout_constraintTop_toBottomOf="@id/num_pizzas_text_view"/>
</androidx.constraintlayout.widget.ConstraintLayout>